# videoBetterTools

./: .dockerignore  .gitignore  Dockerfile.web  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  index.html  package-lock.json  package.json  server.js  styles.css  vite.config.ts
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth_users.py  0003_task_progress.py
backend/app/: admin.py  auth.py  cleanup.py  config.py  main.py  models.py  pricing.py  queue.py  schemas.py  seed.py  services.py  storage.py  tool_config.py  worker.py
backend/app/video/: enhance.py  translate.py  watermark.py  workflow.py
backend/tests/: test_cleanup.py  test_gpu_adapter_stall.py  test_pricing_auth.py  test_task_progress.py  test_task_results.py  test_video_watermark_adapter.py
data/: db.json
deploy/: nginx.conf  production.env.example
docs/: architecture.md
scripts/: dev.mjs
scripts/gpu/: deploy_docker_wrapper.sh  propainter_api_adapter.py  propainter_api_server.py  propainter_runner.py  propainter_ssh_adapter.py  video_enhance_api_adapter.py  video_enhance_runner.py  video_translate_api_adapter.py  video_translate_runner.py
src/: main.tsx  router.tsx  tool-config.js  types.ts
src/api/: client.ts
src/components/: AppShell.tsx
src/lib/: format.ts  tool-icons.tsx  translate-languages.ts
src/pages/: AdminPage.tsx  BillingPage.tsx  InternalBatchWorkflowPage.tsx  LoginPage.tsx  TasksPage.tsx  ToolPage.tsx  (+1 more)
