[project]
name = "model-plaza-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "pytest>=8.3.0",
  "redis>=5.2.0",
  "rq>=2.0.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.34.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
